# GaussianDWM

./: .gitignore  README.md  index.html  pyproject.toml  styles.css
src/gaussiandwm_cvpr/: README.md  utils.py
src/gaussiandwm_cvpr/configs/qa/: budgets.yaml  data.yaml  eval.yaml  gaussian_token.yaml  infer.yaml  model.yaml  stage_plan.yaml  train.yaml
src/gaussiandwm_cvpr/configs/world/: budgets.yaml  data.yaml  eval.yaml  gaussian_token.yaml  infer.yaml  model.yaml  stage_plan.yaml  train.yaml
src/gaussiandwm_cvpr/data/: __init__.py  clip_text_features.py  coarse_selectors.py  collator.py  dataset.py  gauss_cache.py  gauss_normalizer.py  records.py  taxonomy.py
src/gaussiandwm_cvpr/eval/: __init__.py  export_dists_layout.py  qa_metrics.py  world_metrics.py
src/gaussiandwm_cvpr/examples/: README.md
src/gaussiandwm_cvpr/examples/dummy_data/: qa_train.jsonl  (+1 more)
src/gaussiandwm_cvpr/infer/: __init__.py  qa.py  world.py
src/gaussiandwm_cvpr/models/: gauss_aligner.py  qa_head.py  qwen_gauss_backbone.py  selectors.py  unified_model.py  world_head.py
src/gaussiandwm_cvpr/scripts/: __init__.py  eval_qa.py  eval_world.py  export_world_dists_layout.py  infer_qa.py  infer_world.py  train_qa.py  train_world.py
src/gaussiandwm_cvpr/tests/: test_config_contracts.py  test_data_contracts.py  test_export_dists_layout.py  test_infer_eval_contracts.py  test_model_scope.py  test_script_contracts.py  test_selectors.py  test_training_scope.py
src/gaussiandwm_cvpr/train/: __init__.py  checkpoint.py  loss.py  stage_scheduler.py  trainable_groups.py  trainer.py
(+19 files in other folders)
